--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.result-search {
+    min-width: -webkit-fill-available;
+    padding: 5px 0px 5px 20px;
+}
